# OpenGL-Expirements

./: .gitignore  CMakeLists.txt  README.MD  makingawindow.cpp  shader.cpp  shader.h
Includes/: shader.h
Libs/: glfw3.lib  glm.lib
makingawindow/: makingawindow.sln  makingawindow.vcxproj  makingawindow.vcxproj.filters  resource.h  shader.h
